# rmc-inclusion

./: .gitignore  CMakeLists.txt  M_RM_compare.c  M_RM_diff.c  M_RM_visualize.c  Makefile  README  RM_collision.c  codes_info.c  common.c  common.h  gen_graph.sh  gen_rmc.sh  gen_rmc_full.sh  graph.c  graph.h  ideals.c  ideals.h  info.c  info.h  list.c  list.h  log.c  log.h  rmc.c  test_Mpi_in_Mp.c  u_calculator.c
cmake/Modules/: DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  DefineOptions.cmake  FindGMP.cmake
gap/: rmc.g
include/: CMakeLists.txt
include/rmc/: common.h  constants.h  ideals.h  log.h
lib/: CMakeLists.txt
lib/rmc/: common.c  constants.c  ideals.c  log.c
sage/: codes.py  codes_info.sage  inclusions_graph.sage  rm_inclusions_graph.sage  test_codes.sage
src/: CMakeLists.txt  color.c  color.h  constants.c  constants.h  graph.c  graph.h  info.c  info.h  rmc-beautifier.c  rmc-diff.c  rmc-ig.c  rmc-short.c
src/utils/: CMakeLists.txt  M_RM_diff.c  M_RM_print.c  M_RadM_diff.c  M_RadM_print.c  RM_collision.c  RadM_collision.c  Rad_print.c  Rads_print.c  u_calculator.c
tests/: test_Mpi_in_Mp.c
tools/: build.sh  gen_graph.sh  gen_rmc-ig.sh  gen_rmc-short.sh  gen_rmc.sh  gen_rmc_full.sh
